--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [project]
 name = "aiagent"
 version = "0.1.0"
-description = "Add your description here"
+description = "Build an AI agent in Python"
 readme = "README.md"
 requires-python = ">=3.12.11"
 dependencies = [
